Finished section on object creation for now

--- a/paper.textile
+++ b/paper.textile
@@ -436,7 +436,7 @@ There are many different ways to create and initialize a new object in javascrip
 
 h4(#factory_functions). Factory Function
 
-In the Factory Function approach you create a function which acts as the constructor for the object you want to create. It can take any number of arguments and it uses those arguments to add properties and methods to object. The example below shows a Person factory function which takes two arguments: firstName, lastName. It uses those arguments to create two properties and a function on the object.
+In the Factory Function approach you create a function which acts as the constructor for the object you want to create. It can take any number of arguments and it uses those arguments to add properties and methods to the object. The example below shows a Person factory function which takes two arguments: firstName, lastName. It uses those arguments to create two properties and a method on the object.
 
 <pre><code>var Person = function(firstName, lastName){
 	this.firstName = firstName;
@@ -451,7 +451,7 @@ The advantage of this approach is that you can define any variables you want ins
 
 h4(#prototype). Classical  
 
-In the Classical approach you create a function which only initializes the properties of the object. Instead of adding the methods directly on each object you add it to the prototype instead as shown below. 
+In the Classical approach you create a function which only initializes the properties of the object. Instead of adding the methods directly on each object you add it to the prototype as shown below. 
 
 <pre><code>var Person = function(firstName, lastName){
 	this.firstName = firstName;
@@ -463,16 +463,27 @@ Person.prototype.fullName = function(){ return this.firstName + " " + this.lastN
 
 new Person("Mads","Hartmann");</code></pre>
 
-This resolves the disadvantage of the Factory Function approach as all the instances share the same prototype object. This means that object creation is roughly 3 x faster (see section about performance tests) because the interpreter doesn't need to add the same methods to all of the objects and the objects takes up less memory. 
+This resolves the disadvantage of the Factory Function approach as all the instances share the same prototype object. This means that object creation is roughly 3 x faster (see section about performance tests) because the interpreter doesn't need to add the same methods to all of the objects. This also results in objects that use less memory.
 
-There are two disadvantages of this approach. Firstly, because the methods are no longer stored directly on the object the interpreter needs to do, at least, one extra lookup before it can execute the method. Because of this it takes roughly %40 longer to invoke a method on an object. The second disadvantage is that it's no longer possible to the objects to have private state. 
+There are two disadvantages to this approach. Firstly, because the methods are no longer stored directly on the object the interpreter needs to do one extra lookup before it can execute the method. Because of this it takes roughly %40 longer to invoke a method on an object. The second disadvantage is that it's no longer possible for the objects to have any private state. 
 
 h4(#object_create). Object.create
+
+The ECMAScript 5 Language Specification defines a new method on Object: Object.create. Given an object and a properties object it will create a new object. The following code shows how to create a @Person@ prototype and use it to create new instance of @Person@.
 
 <pre><code>var Person = {
 	fullName: function() { return this.firstName + " " + this.lastName; }
 };
-Object.create(Person, {firstName: "Mads", lastName: "Hartmann"});</code></pre>
+Object.create(Person, {
+	firstName: { 
+		value: "Mads"
+	}, 
+	lastName: { 
+		value: "Hartmann"
+	} 
+});</code></pre>
+
+This approach allows for great flexibility and shows JavaScripts true prototypal nature. Unfortunately Object.create isn't implemented in all modern browsers and in the ones where it is implemented the Object.create application isn't as performant as the Classical one. Because of this I've chosen to use the Classical approach in this library. 
 
 h3(#javascript_call_stack). Javascript call-stack
 
